k8s/gitops/20-network/base/26-argocd/ingress/allow-notifications-to-redis.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-notifications-to-redis
  namespace: argocd

spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
