k8s/gitops/20-network/base/26-argocd/ingress/allow-server-to-dex.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-server-to-dex
  namespace: argocd

spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-dex-server
      toPorts:
        - ports:
            - port: "5556"
              protocol: TCP
            - port: "5557"
              protocol: TCP
